--- a/techliyClient/techliyClient.csproj
+++ b/techliyClient/techliyClient.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
