--- a/techliyClient/techliyClient.csproj
+++ b/techliyClient/techliyClient.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0.5</AssemblyVersion>
+    <AssemblyVersion>1.0.7</AssemblyVersion>
     <ApplicationManifest>app.manifest</ApplicationManifest>
       </PropertyGroup>
 
